# chrono-id

./: .gitignore  README.md
db-extensions/postgres/: Makefile  README.md  chrono_id.sql
db-extensions/postgres/tests/: test_chrono_id_postgres.py
db-extensions/sqlite/: Makefile  README.md
db-extensions/sqlite/src/: chrono_id.cpp
db-extensions/sqlite/tests/: test_chrono_id_sqlite.py
implementations/: Makefile  README.md
implementations/cpp/: Makefile  README.md
implementations/cpp/include/: chrono_id.hpp  multipliers.hpp
implementations/cpp/tests/: generate_json_tests.py  test.cpp  test_json.cpp
implementations/js/: README.md  package-lock.json  package.json
implementations/js/src/: index.js
implementations/python/: Makefile  README.md  pyproject.toml
implementations/python/src/: chrono_id.py
implementations/python/src/chrono_id/: __init__.py  core.py  weyl.py
implementations/python/tests/: test_chrono_id.py  test_generator.py  test_json.py
proof/: MATHEMATICAL_PROOF.md  Makefile  README.md  all_prime_baskets.py  champion.md  golden_ratio_primes.csv  implementation.md  proof.md  summary.md
scripts/: Makefile  README.md  gen_tests.py
simulation/: Makefile  README.md  plot_viz.py  report.md
simulation/chrono_sim/: Cargo.toml
simulation/data/: avalanche_diffusion.csv  entropy_decay.csv  register_performance.csv  routing_efficiency.csv  storage_footprint.csv  throughput_cliff.csv
tests/: cross_platform_tests.json  cross_platform_tests.schema.json
weyl/: README.md  weyl-lang-gen.py  weyl-multipliers.txt  weyl-primes.py
(+14 files in other folders)
