[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chrono-id"
version = "0.1.0"
description = "K-Sortable, Time-Ordered Unique Identifiers (32/64-bit)"
readme = "README.md"
urls = { "Homepage" = "https://github.com/dilipvamsi/chrono-id" }
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Dilip Vamsi" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "coverage",
]
